# MSPM0x_template_CMake

./: .clangd  CMakeLists.txt  README.md  openocd.cfg  template.syscfg
Core/: main.c  template.syscfg  ti_msp_dl_config.c  ti_msp_dl_config.h
Source/Src/: main.c
cmake/: arm-toolchain.cmake
syscfg/: template.syscfg  ti_msp_dl_config.c  ti_msp_dl_config.h
